changing to stealth mode

--- a/_includes/page_footer.html
+++ b/_includes/page_footer.html
@@ -1,5 +1,5 @@
 <!-- Start page_footer include -->
-<footer class="facet-footer">
+<footer class="stealth-footer">
 <div class="container">
   <div class="text-center">
     <p>
