--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -1,5 +1,5 @@
 <!-- Start page_header include -->
-<div class="navbar navbar-inverse navbar-static-top facet-nav">
+<div class="navbar navbar-inverse navbar-static-top stealth-nav">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
