--- a/_includes/site_head.html
+++ b/_includes/site_head.html
@@ -1,9 +1,9 @@
 <meta charset='utf-8'>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="An open-source JavaScript framework for composing powerful database queries that return data optimized for creating advanced visualizations.">
-<meta name="author" content="facetjs">
+<meta name="author" content="stealthbomber">
 
-<title>facet.js | {{page.title}}</title>
+<title>Stealthbomber | {{page.title}}</title>
 
 <!-- favicon -->
 <link rel="apple-touch-icon" sizes="57x57" href="/icon/apple-touch-icon-57x57.png">
@@ -36,18 +36,3 @@
 <link rel="stylesheet" href="/css/syntax.css">
 <link rel="stylesheet" href="/css/docs.css">
 
-<!-- <script type="text/javascript" src="/assets/js/fastrack.js.min"></script> -->
-<script>
-  /*
-  (function() {
-    var cx = '004325268462231820898:e4htgtatbkg';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-        '//www.google.com/cse/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-  */
-</script>
