--- a/_layouts/simple_page.html
+++ b/_layouts/simple_page.html
@@ -2,7 +2,7 @@
 layout: html_page
 ---
 
-<div class="facet-header">
+<div class="stealth-header">
   <div class="container">
     <h1>{{ page.title }}</h1>
     <h4>{{ page.subtitle }}</h4>
