--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -8,13 +8,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/"><span class="facet-logo"><img class="facet-logo" src="/icon/facet_logo.svg"></span></a>
+      <a class="navbar-brand" href="/"><span class="stealth-logo"><img class="stealth-logo" src="/icon/stealth_logo.svg"></span></a>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li class="{% if page.sectionid == 'docs' %} active{% endif %}"><a href="/docs/introduction">Documentation</a></li>
-        <li class="{% if page.sectionid == 'play' %} active{% endif %}"><a href="/play">Play</a></li>
-        <li class="{% if page.sectionid == 'community' %} active{% endif %}"><a href="/community">Community</a></li>
         <li class="{% if page.sectionid == 'blog' %} active{% endif %}"><a href="/blog">Blog</a></li>
         <li><a href="{{site.data.contact.twitter}}" class="fa fa-twitter"></a></li>
         <li><a href="{{site.data.contact.github}}" class="fa fa-github"></a></li>
