--- a/css/header.css
+++ b/css/header.css
@@ -63,10 +63,10 @@
   background-size: 450px 209px;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url('/img/stealth_closeup.png');
+  background-image: url('/img/druid.png');
   background-image: -webkit-image-set(
-    url('/img/stealth_closeup.png') 1x,
-    url('/img/stealth_closeup.png') 2x
+    url('/img/druid.png') 1x,
+    url('/img/druid_2x.png') 2x
   );
 }
 
