--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 .stealth-masthead {
-  border-image: radial-gradient(hsla(309, 63%, 55%, 1), hsla(309, 63%, 55%, 1) 10%, #1c1c26) 100% 1;
+  /*border-image: radial-gradient(hsla(309, 63%, 55%, 1), hsla(309, 63%, 55%, 1) 10%, #1c1c26) 100% 1;*/
   border-width: 1px 0 0 0;
-  padding: 0 0 30px;
+  padding: 0 0 10px;
   color: #c3c3c5;
   background-color: hsla(231, 17%, 15%, 1);
   text-align: center;
@@ -35,6 +35,15 @@
   overflow: hidden;
 }
 
+.lead-text {
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 1.4;
+}
+
 .stealth-panel {
   background-color: #2e2e2e;
   background-color: #1C1C26;
@@ -54,6 +63,21 @@
 .blog h2 {
   font-weight: 400;
   font-size: 24px;
+}
+
+.stealth-mainpic {
+  border-image: radial-gradient(hsla(309, 63%, 55%, 1), hsla(309, 63%, 55%, 1) 10%, #1c1c26) 100% 1;
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+  margin: 0 auto;
+}
+
+.stealth-cockpit {
+  /*position: absolute;*/
+  max-width: 100%;
+  height: auto;
+  /*top: 0;*/
 }
 
 .stealth-bootlogo {
@@ -119,7 +143,7 @@
   padding-bottom: 12px;
 }
 
-.stealth-nav img.stealth-logo {
+.stealth-nav img.facet-logo {
   height: 50px;
   position: absolute;
   top: 0;
